welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:28: error: not found: value setBrosseCouleur
    setBrosseCouleur(i)
    ^